--- a/resume/style.css
+++ b/resume/style.css
@@ -14,27 +14,8 @@ header{
     border-radius: 4px;
 }
 h2{text-align: center;
-font-size: x-large ;
-font-style: italic;
-text-decoration-line: underline;
-}
-h3{text-align: center;
-font-size: x-large ;
-font-style: italic;
-text-decoration-line: underline;
-}
-h4{text-align: center;
     font-size: x-large ;
     font-style: italic;
     text-decoration-line: underline;
-}
-h5{text-align: center;
-    font-size: x-large ;
-    font-style: italic;
-    text-decoration-line: underline;
-}
-h6{text-align: center;
-    font-size: x-large ;
-    font-style: italic;
-    text-decoration-line: underline;
+    margin-bottom: 10px;
 }
