--- a/mobile/style.css
+++ b/mobile/style.css
@@ -20,7 +20,6 @@ img{
 h1,h2,h3{
     margin:0%;
     padding: 1em 0;
-    text-align: center;
 }
 
 p{
@@ -34,9 +33,9 @@ p{
     color: blue;
     padding:1em 2em;
     border: 1px solid grey;
-    margin:.5em 0;
+    margin:0.5em 0;
 }
-/*header*/
+
 #showcase{
     min-height: 400px;
     color:bisque;
@@ -51,12 +50,12 @@ p{
     background-repeat:no-repeat;
     background-size:cover;
      widows: 100%;
-     height:40px;
+     height:400px;
      z-index:-1;
      opacity:0.3;
 }
 #showcase h1{
-   /*  padding: 100%;*/
+     padding: 100%;
      padding-bottom: 0%
  }
  #showcase .content-wrap,
@@ -123,4 +122,9 @@ color:rgb(41, 40, 40) ,
         grid-column: 2/4;
     }
 
+ }
+ #main-footer{
+     padding: 2em;
+     background-color: black;
+     text-decoration: blanchedalmond;
  }
