--- a/mobile/style.css
+++ b/mobile/style.css
@@ -5,16 +5,16 @@ body{
     background-color:rgb(61, 60, 60);
     font-family: 'Times New Roman', Times, serif;
     color:white;
-    font-size: 1.1;
-    line-height: 1,5;
+    font-size: 1.1em;
+    line-height: 1,5em;
     text-align: center;
 }
  
 img{ 
     display: block;
-   /* background-image: url("keyboard.jpg");*/
-    widows:25%;
-    height:outo ;
+    background-image: url("https://unsplash.com/photos/Iq11eskt5AQ.jpg.bg-image");
+    width:100%;
+    height:outo;
 }
 
 h1,h2,h3{
@@ -30,41 +30,44 @@ p{
 .btn{
    display:inline-block; 
     background-color: bisque;
-    color: blue;
+    color: rgb(221, 17, 17);
     padding:1em 2em;
-    border: 1px solid grey;
+    border: 1px solid, rgb(61, 60, 60);
     margin:0.5em 0;
 }
-
+.btn{
+    background:beige;
+    color:rgb(61, 60, 60);
+}
+/*header*/
 #showcase{
-    min-height: 400px;
-    color:bisque;
+    min-height: 450px;
+    color:white;
     text-align:center;
 }
 
 #showcase .bg-image{ 
     position: absolute;
     background-color: grey; 
-    background-image:  url('keyboard.jpg');
-     background-position:center;
+    background-position:center;
     background-repeat:no-repeat;
     background-size:cover;
-     widows: 100%;
-     height:400px;
+     width: 100%;
+     height:450px;
      z-index:-1;
      opacity:0.3;
 }
 #showcase h1{
-     padding: 100%;
-     padding-bottom: 0%
+     padding-top: 100%;
+     padding-bottom: 0%;
  }
  #showcase .content-wrap,
  #showcase-a .content-wrap{
   padding: 0 1.5em;
  }
  #section-a{
-     background: white;
-     color:rgb(41, 40, 40);
+     background: rgb(131, 45, 45);
+     color:(61, 60, 60);
      padding-bottom: 2em;
  }
  #section-b{
@@ -76,55 +79,62 @@ p{
      padding:0;
  }
  #section-b li{
-margin-bottom: 1.5em;
+margin-bottom: 1.em;
 background-color: bisque;
-color:rgb(41, 40, 40) ,
+color:(61, 60, 60);
  }
  .card-content{
-     padding: 2em;
+     padding: 1.5em;
  }
  #section-c{
-     background-color: bisque;
-     color:rgb(41, 40, 40);
+     background:(61, 60, 60) ;
+     color:bisque;
      padding: 2em;
  }
- #section-d{
-     display: grid;
+ #section-d .box{
+     padding:2em;
      color:bisque;
-     grid-template-columns:1fr 1fr 1fr 1fr;
-     grid-template-rows: 1fr 1fr;
-     grid-column-gap: 10px;
-     grid-auto-rows:15px;
-
  }
-  #section-d grid-container{
-    margin:2em 1em 3em;
-    height: 1em;
-    width: 1,5em;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    border-radius: 25px;
-    background: transparent;
-    padding: 20px; 
-    text-align: center;
-    border: 2px solid rgb(255, 255, 255);
- }
+  #section-d .box:first-child{
+      background:rgb(90, 90, 224);
+    }
+   
+    #main-footer{
+        padding:2em;
+        background:black;
+        color :bisque;
+        text-align: center;
+    }
 
- @media(min-width:700px){
+
+ @media(min-width: 700px){
      .grid{
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr repeat(2, minmax(auto,25em));
     }
-
-    .content-wrap,
-    #section-b{
+    #section-a.content-text{
+        columns:2;
+        column-gap:2em;
+    }
+    #section-a .content-text p{
+        padding-top:0;
+    }
+    
+   .content-wrap,
+    #section-b ul{
         grid-column: 2/4;
     }
+    .box, #main-footer div{
+    grid-column:span 2;
+    }
+    #section-b ul{
+        display:flex;
+         justify-content:space-around;
+    }
+    #section-b il{
+        width:31%;
+    }
+}
 
- }
- #main-footer{
-     padding: 2em;
-     background-color: black;
-     text-decoration: blanchedalmond;
- }
+
+ 
