--- a/checkPoint-1/Tablet/style.css
+++ b/checkPoint-1/Tablet/style.css
@@ -1,6 +1,6 @@
 /*core styles*/
 body{
-    display: grid;
+    display:grid; 
     margin: 0%;
     background-color:rgb(61, 60, 60);
     font-family: 'Times New Roman', Times, serif;
@@ -21,7 +21,6 @@ h1,h2,h3{
     margin:0%;
     padding: 1em 0;
 }
-
 p{
     margin: 0%;
     padding: 1em 0;
@@ -67,10 +66,11 @@ p{
  }
  #section-a{
      background: rgb(131, 45, 45);
-     color:(61, 60, 60);
+     color:black;
      padding-bottom: 2em;
  }
  #section-b{
+     display: flex;
      padding:2em 1em 1em;
  }
  #section-b ul{
@@ -107,10 +107,10 @@ color:(61, 60, 60);
     }
 
 
- @media(min-width: 700px){
-     .grid{
+ @media(min-width:800 px){
+     .grid-card{
         display: grid;
-        grid-template-columns: 1fr repeat(2, minmax(auto,25em));
+        grid-template-columns: auto,auto,auto;
     }
     #section-a.content-text{
         columns:2;
@@ -122,19 +122,18 @@ color:(61, 60, 60);
     
    .content-wrap,
     #section-b ul{
-        grid-column: 2/4;
+        grid-column: 1/3;
+        display:flex;
+        justify-content:space-around;
     }
+    #section-b li{
+        width:31%;
+    }
+
     .box, #main-footer div{
     grid-column:span 2;
-    }
-    #section-b ul{
-        display:flex;
-         justify-content:space-around;
-    }
-    #section-b il{
-        width:31%;
     }
 }
 
 
- 
+
