--- a/my portfolio/styles/style.pro.css
+++ b/my portfolio/styles/style.pro.css
@@ -1,90 +1,141 @@
+
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url(https://png.pngtree.com/thumb_back/fh260/back_pic/00/15/30/4656e81f6dc57c5.jpg);
+  background-image: url(../profile-pic/Canva\ -\ Photo\ of\ Cattails.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
+/*  z-index:-1;
+   opacity:0.3;*/
 }
 
-.logo {
-  width: 100px;
-  height: 100px;
-  margin: 3% 10%;
+
+.header {
+  overflow: hidden;
+  background-image: url(../profile-pic/banner.jpg);
+  /* width: auto; */
+  height: 250px;
 }
 
-header {
-  display: grid;
-  grid-template-columns: 40% 60%;
-  width: 100%;
+ .header a:hover {
+  background-color:yellow;
+  color: rgba(247, 97, 28);  
 }
 
-main {
+/* .navigation a.active {
+  background-color: rgb(241, 245, 248);
+  color: red;
+}   */
+
+.navigation > a {
+  float: right;
   height: auto;
-  width: 100%;
-  display: grid;
-  grid-template-columns: 30% 40% 30%;
-}
-
-nav > a {
-  margin: 2% 1% 3%;
-  height: 10%;
-  width: 15%;
-  color: white;
+  margin: 0 10px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-  border-radius: 25px;
-  background: transparent;
-  padding: 20px; 
-  text-align: center;
-  border: 2px solid white;
+  font-size: 1.5rem; 
+  text-align: right;
+  font-style: normal;
+  color: black;
+   
 }
 
-.has-border {
-  border-radius: 25px;
-  border: 2px solid #0795C3;
-  background: none;
-  padding: 20px; 
-}
+  /*section-main-a*/
+ #section-main-a{
+   display: flex;
+   flex-direction:column; 
+  }
+  #profile-pic {
+    width:300px;
+    height:200px;
+    border-radius: 50%;
+    margin: 15% auto;
+    float: right; 
+    margin-top: 20px;
+     margin-bottom:10px;
+     margin-right:20px; 
+  }
+  h1 {
+    color:white;
+    font-size: 1.5rem;
+    font-stretch:normal;
+    margin-top: 10px;
+    margin-bottom: 7px;
+    text-align: right;
+    margin-right: 30px;
+  }
+  
+  h2 {
+    color:white;
+    font-size: 1.5rem;
+    font-stretch:normal;
+    margin-top: 10px;
+    margin-bottom: 7px;
+    text-align: right;
+    margin-right: 30px;
+  }
+  /*section-main-b*/
+  #section-main-b{
+    display:flex;
+    flex-direction: row;
+    width: 820px;
+  }
+  p {
+    margin-right:35px;
+    padding:1px;
+    font-size:1.5em;
+    text-align:left;
+    margin-bottom: 30px;
+    color:white;
+  }
+  ul{
+    list-style-type: square;
+    margin-left:35px;
+    padding:1px;
+    font-size:1.5em;
+    text-align:left;
+    margin-bottom: 30px;
+    color:white;
+  }
+  .section-main-b{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  video{
+    max-width:500px;
+    height:400px;
+    margin-top:20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+  }
+  iframe{
+    height:380px;
+    width:300px;
+    margin-top:20px;
+    margin-right:20px;
+  }
+  
 
-nav {
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
+  #main-footer{
+    padding:2em;
+    background:white;
+    color :rgb(29, 27, 27);
+    text-align: center;
 }
+  .box, #main-footer div{
+    display:flex,
+    }
+ @media screen and (max-width: 480px) {
+      #leftsidebar {
+        width: 380px;
+       }
+      #main {
+        width: 380px;
+      }
+      
+    }
+  
+  
+  
+  
 
-#profile-pic {
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
-  margin: 15% auto;
-  grid-column: 2/3;
-}
 
-h1 {
-  color:white;
-  grid-column: 2/3;
-  margin: 3% auto;
-  border-bottom: 2px solid #1940A9;;
-}
-
-h2 {
-  grid-column: 2/3;
-  margin: 3% auto;
-  font-style: italic;
-}
-
-button {
-  grid-column: 2/3;
-  margin: 3% auto;
-  width: 70%;
-  height: 15%;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-  border-radius: 25px;
-  background: transparent;
-  padding: 20px; 
-  padding-bottom: 5%;
-  text-align: center;
-  color: white;
-  letter-spacing: 16px;
-  font-style: italic;
-}
