--- a/landingpage-Animated/styles/Animated.css
+++ b/landingpage-Animated/styles/Animated.css
@@ -1,3 +1,5 @@
+
+@media screen and (min-width: 480px) {
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-image: url(../images/background.jpg);
@@ -34,6 +36,18 @@ body {
   background-color: white; 
 }
 
+.navigation >a {
+  animation-delay: 0s;
+  animation-duration:750ms;
+  animation-iteration-count:4;
+}
+#img{
+  animation-delay:1s;
+  animation-duration:10s;
+  animation-iteration-count:20;
+  margin-top:110px;  
+  float:left;
+}
 
 
 /*section-main-a*/
@@ -49,6 +63,11 @@ body {
    margin-top: 50px;
    margin-bottom:10px;
    margin-right:20px; 
+ }
+ strong{
+  animation-delay:4s;
+  animation-duration: 5s;
+  animation-iteration-count:1;  
  }
 
  strong{
@@ -144,7 +163,7 @@ textarea{
 #section-main-c{
     display:flex;
     flex-direction: row;
-    background-color:lightgoldenrodyellow;
+    background-color:rgb(250, 250, 174);
   }
   .pic {
     width: 400px;
@@ -175,5 +194,10 @@ textarea{
     border: 1px solid black;
     border-radius: 12px;    
     background-color:rgb(219, 24, 99);  
-
-  } 
+ } 
+ .blog{
+  animation-delay: 250ms;
+  animation-duration: 3s;
+  animation-iteration-count: 3; 
+ }
+}
