--- a/DOM-ticTacTOE/styles/ticTacToe.css
+++ b/DOM-ticTacTOE/styles/ticTacToe.css
@@ -2,7 +2,11 @@ html,
 body{
   height:100% ;
   font-family:'open sans', sans-serif;
-  background-color: #adb3e6;
+  background-color: #535355;
+}
+.body{
+  display:flex;
+  flex-direction: row;
 }
 .flex-container{
   display: flex;
@@ -17,6 +21,68 @@ body{
   justify-content:center;
   align-items: center;
 }
+.side{
+  display:flex;
+  flex-direction: column
+}
+.title{ 
+  font-family:'Handlee', cursive;
+  color:white;
+  font-size: 2rem;
+  font-stretch:normal;
+  float:center; 
+  margin-top: 50px;
+  margin-bottom:10px;
+  margin-left:10px;  
+}
+.x {
+  float:left;
+  height: auto;
+  margin: 30px 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem; 
+  text-align: center;
+  font-style: normal;
+  color:blue;
+  display: inline-block;
+  width: 6rem;
+  height: 20px;
+  padding: 5px;
+  border: 1px solid blue;    
+  background-color:rgb(245, 87, 87); 
+}
+.o{
+  float:left;
+  height: auto;
+  margin: 30px 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem; 
+  text-align: center;
+  font-style: normal;
+  color:blue;
+  display: inline-block;
+  width: 6rem;
+  height: 20px;
+  padding: 5px;
+  border: 1px solid blue;    
+  background-color: rgb(245, 87, 87); 
+}
+.navigation > a {
+  float:left;
+  height: auto;
+  margin: 30px 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem; 
+  text-align: center;
+  font-style: normal;
+  color:blue;
+  display: inline-block;
+  width: 6rem;
+  height: 20px;
+  padding: 5px;
+  border: 1px solid blue;    
+  background-color:rgb(245, 87, 87); 
+}
 .board-container{
 height:100%;
 width:100%; 
@@ -27,8 +93,8 @@ width:100%;
 .square{
   width:200px;
   height:200px;
-  border:3px solid rgb(41, 39, 37)
+  border:3px solid rgb(229, 247, 95)
 }
-.square-hover{
+.square:hover{
   background-color: white;
 }
