--- a/dashboard/styles/style.dashboard.css
+++ b/dashboard/styles/style.dashboard.css
@@ -5,24 +5,23 @@ body {
     background-repeat: no-repeat;
     background-size: 100% , 100%;
   } 
-  
-.header {
-    overflow: hidden;
-    height: 180px;
-  }
-  
-   .a:hover {
+   .navigation a:hover {
     background-color:white;
     color: purple;  
   }
-  .header{
+  #header{
     display: flex;
-    flex-direction:column-reverse;
+    flex-direction:row ;
+    height: 120px;
+  }
+  .navigation {
+    float:right;
   }
   .navigation > a {
-    float: right;
+    overflow: hidden;
     height: auto;
-    margin: 10px 10px;
+    margin-right: 10px;
+    margin-top: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem; 
     text-align: center;
@@ -30,31 +29,85 @@ body {
     color:blue;
     display: inline-block;
     width: 6rem;
-    height: 20px;
+    height: 23px;
     padding: 5px;
     border: 1px solid blue;    
     background-color: white;
-     
+    
   }
   h1{
     font-family:  Arial, Helvetica, sans-serif;
     font-size: 2rem;
     color:white;
-    text-align:left;
-    margin-left:30px;  
+    text-align:right;
+    margin-right:90px;  
   }
+  p{
+    font-family:  Arial, Helvetica, sans-serif;
+    font-size: 2rem;
+    color:white;
+    text-align:right;
+    margin-right:50px; 
+  }
+  #img{
+    float:right;
+    width:200px;
+    height:150px;
+    border-radius: 50%;
+    margin-right:50px;
+  }
+  
   .Clock{
-      margin-top:10px;
       margin-left: 50px;
       float: left;
       color:white
   }
+  .new {
+    height: 40px;
+    width: 200px;
+    position: fixed;
+    margin-top:50px;
+    float:center;
+    background-color: rgb(6, 17, 2);
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
+  
+  .new a, .dropdown-btn {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+    display: block;
+    border: none;
+    background: none;
+    width: 100%;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+  }
+  
+  .active {
+    background-color: green;
+    color: white;
+  }
+  .dropdown-container {
+    display: none;
+    background-color: #8de21d;
+    padding-left: 8px;
+  }
+  .school {
+    float: center;
+    padding-right: 8px;
+  }
+ 
 h2{
   font-family:  Arial, Helvetica, sans-serif;
   font-size: 1.5rem;
   color:white;
   text-align:left;
   margin-left:30px; 
+  margin-top: 10px;
 }
 .main {
   box-sizing: border-box;
@@ -74,21 +127,7 @@ h2{
   background-color:grey 
 }
 
-/*button{
-float: center;
-height: auto;
-margin: 10px 10px;
-font-family: Arial, Helvetica, sans-serif;
-font-size: 1rem; 
-text-align: center;
-font-style: normal;  
-color:blue;
-display: inline-block;
-width: 6rem;
-height: 20px;
-padding: 5px;
-border: 1px solid blue;    
-background-color: white;*/
+
 
 h3{
   font-family:  Arial, Helvetica, sans-serif;
@@ -97,6 +136,7 @@ h3{
   text-align:center;
   margin-left:30px;  
 }
+
 .container {
   margin: 2rem auto;
   max-width: 50rem;
@@ -141,6 +181,71 @@ form {
   height: 400px;
   min-height: 400px;
   width: 100%;
+}
+
+.navbar {
+  float:center;
+  overflow: hidden;
+  width: 160px;
+  background-color: grey;
+  text-align: center;
+  margin-left: 210px;
+}
+
+.navbar a {
+  float: center;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: center;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+  width:160px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 
